--- a/Tests/NiTiS.Math.Tests.csproj
+++ b/Tests/NiTiS.Math.Tests.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
