--- a/Tests/NiTiS.Math.Tests.csproj
+++ b/Tests/NiTiS.Math.Tests.csproj
@@ -6,7 +6,16 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="NUnit" Version="3.13.3" />
+		<PackageReference Include="NUnit.ConsoleRunner" Version="3.9.0" />
+		<PackageReference Include="NUnit.Runners" Version="3.9.0" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\NiTiS.Math\NiTiS.Math.csproj" />
