--- a/Tests/NiTiS.Math.Tests/NiTiS.Math.Tests.csproj
+++ b/Tests/NiTiS.Math.Tests/NiTiS.Math.Tests.csproj
@@ -18,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\NiTiS.Math\NiTiS.Math.csproj" />
+		<ProjectReference Include="..\..\NiTiS.Math\NiTiS.Math.csproj" />
 	</ItemGroup>
 
 </Project>
