--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,1 +1,20 @@
-
+name: Bug Report
+description: Report a bug
+title: "[Bug]: <Describe a bug shortly>"
+labels: ["bug"]
+body:
+  - type: markdown
+    attributes:
+      value: |
+        Please full a form and describe bug!
+  - type: checkboxes
+    id: typek
+    attributes:
+      label: Traits of bug
+      description: Choose traits that describes this issue
+      options:
+        - label: Arithmetic error
+  - type: textarea
+    label: Please, describe!
+  - type: textare
+    label: StackTrace
