--- a/NiTiS.Math/NiTiS.Math.csproj
+++ b/NiTiS.Math/NiTiS.Math.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<AssemblyName>NiTiS.Math</AssemblyName>
-		<Version>2.3.3</Version>
+		<Version>2.3.4</Version>
 		<VersionPrefix>preview</VersionPrefix>
 
 		<Description>The NiTiS library providing maths structs and operations</Description>
@@ -11,6 +11,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="NiTiS.Core" Version="3.2.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Vectors\" />
 	</ItemGroup>
 	
 	<Import Project="../Meta.props" />
