--- a/Meta.props
+++ b/Meta.props
@@ -27,7 +27,7 @@
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<NoWarn>CS8981;CS1591;IDE1006;IDE0049;IDE0054</NoWarn>
+		<NoWarn>CS8981;IDE1006;IDE0049;IDE0054</NoWarn>
 
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
