+ add Region2d + Region3d + update dependency NiTiS.Core + update docs + #regions Vector3d.Ops.cs + NiTiS.Math -> src/NiTiS.Math + NiTiS.Math.Benchmark -> benchmarks/NiTiS.Math.Bencnchmark

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
     - dev
-    - stable*   
+    - stable*
     paths:
     - '**.cs'
     - '**.csproj'
@@ -23,10 +23,10 @@ jobs:
         project: ["NiTiS.Math"]
     
     steps:
-      - uses: actions/checkout@v2      
+      - uses: actions/checkout@v2
       - name: Build
         run: |
-          cd ${{ matrix.project }}/
+          cd src/${{ matrix.project }}/
           dotnet clean
           dotnet restore
           dotnet build /m:1 -c Release -o ../.build/${{ matrix.project }}/
