--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
           cd src/${{ matrix.project }}/
           dotnet clean
           dotnet restore
-          dotnet build /m:1 -c Release -o ../.build/${{ matrix.project }}/
-          dotnet pack /m:1 -c Release -o ../.pack/${{ matrix.project }}/
+          dotnet build /m:1 -c Release -o ../../.build/${{ matrix.project }}/
+          dotnet pack /m:1 -c Release -o ../../.pack/${{ matrix.project }}/
           
       - name: Artifact Pack 
         uses: actions/upload-artifact@v2
