--- a/benchmarks/NiTiS.Math.Benchmark/NiTiS.Math.Benchmark.csproj
+++ b/benchmarks/NiTiS.Math.Benchmark/NiTiS.Math.Benchmark.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\NiTiS.Math\NiTiS.Math.csproj" />
+    <ProjectReference Include="..\..\src\NiTiS.Math\NiTiS.Math.csproj" />
   </ItemGroup>
 
 </Project>
